# vsbtools

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: windows-optimade.yml
vsbtools/: __init__.py
vsbtools/gaussian_calc_manager/: .gitignore  .gitmodules  1-10_even_POSCARS  POSCARS_2  README.md  db_postproc.py  gau_recalc.py  machines.cjson  postprocess.sh  postprocess_UNN.sh  restart.sh  scenarios.cjson  scenariosLiP.cjson  scenarios_boron_tzvpp.cjson  scenarios_m2.cjson  scenarios_m4.cjson
vsbtools/gaussian_calc_manager/gjf_templates/: B_10_1.gjf  Boron_TZVPP_nofreq.gjf  Boron_even_mult2.gjf  Boron_odd_mult2.gjf  CH.gjf  LiP_ZPE_B3LYP_63112plusG3df3pd.gjf  LiP_ZPE_B3LYP_6311plusG2star.gjf  LiP_ZPE_B3LYP_6311plusGstar.gjf  LiP_ZPE_B3LYP_def2QZVPP.gjf  LiP_ZPE_B3LYP_def2TZVPP.gjf  LiP_ZPE_B3LYPd3_63112plusG3df3pd.gjf  LiP_ZPE_B3LYPd3_6311plusG2star.gjf  LiP_ZPE_B3LYPd3_6311plusGstar.gjf  LiP_ZPE_B3LYPd3_def2QZVPP.gjf  LiP_ZPE_B3LYPd3_def2TZVPP.gjf  LiP_ZPE_M062X_63112plusG3df3pd.gjf  LiP_ZPE_M062X_6311plusG2star.gjf  LiP_ZPE_M062X_6311plusGstar.gjf  LiP_ZPE_M062X_def2QZVPP.gjf  LiP_ZPE_M062X_def2TZVPP.gjf  LiP_recalc.gjf  Mo10O14_orb.gjf  Mo4O5.gjf  fixangle_m4_CC.gjf
vsbtools/gaussian_calc_manager/job_templates/: FRAM.sh  arkuda.sh  local.sh  oleg.sh  rurik.sh  unn.sh
vsbtools/gaussian_calc_manager/src/: common_tools.py  database.pickle  energies.txt  ext_software_io.py  gjf.py  initial_config.gjf  jsn.json  nuka.gjf  pkl.pkl  script.sh  tasks_database.py
vsbtools/gaussian_calc_manager/tmp_proj/: POSCARS_ark_an  POSCARS_ark_vb
vsbtools/genutils/: .gitignore  __init__.py  clustering_chunk.py  duplicate_analysis.py  filesystem_tools.py  format_tools.py  misc.py  my_io.py  pareto_tools.py
vsbtools/genutils/abInitio_io_parse/: ext_software_io.py  gau_parse.py
vsbtools/materials_dataset/: crystal_dataset.py  external_paths_presets.json
vsbtools/materials_dataset/Doc/: Crystal Dataset Use Cases.md  Crystal_Dataset_Use_Cases.ipynb  Crystal_Dataset_Use_Cases.md
vsbtools/materials_dataset/Examples/: README_reproducibility.md  mg_generation_postprocessing_pipeline.ipynb  scenario_no_relax.yaml  scenario_stability_study_grace_relax_good_struc.yaml  setup_reproducibility_envs.sh
vsbtools/materials_dataset/NN_energy_estimators/: grace_client.py
vsbtools/materials_dataset/analysis/: atomic_environment_analysis.py  guidance_statistics.py  pareto_fronts.py  pipeline_legacy.py  scenario_pipeline.py  similarity_tools.py  symmetry_tools.py
vsbtools/materials_dataset/energy_estimation/: grace_bridge.py  mattersim_bridge.py  nn_estimator.py
vsbtools/materials_dataset/genutils/: format_tools.py
vsbtools/materials_dataset/infrastructure/: repository.py  storage.py
vsbtools/materials_dataset/io/: poscars.py  preset_loaders.py  structures_dataset_io.py  uspex_bridge.py
vsbtools/materials_dataset/scripts/: build_tables.py  poll_databases.py
vsbtools/materials_dataset/unittests_datasets/: Cu-Si-P-Ca_guided.extxyz
vsbtools/materials_tools/: .gitignore  aux_routines (2).py  aux_routines.py  cache_paths.py  exchange_within_pairs (2).py  exchange_within_pairs.py  external_paths.py  frag.py  materials_dataset.tgz
vsbtools/materials_tools/NN_energy_estimators/: debug_session.py  grace_client.py  mattersim_client.py  mattersim_estimator.py  mattersim_helper_single.py  mattersim_relaxer.py  mattersim_relaxer_helper_batch.py
vsbtools/materials_tools/abInitio_io_parse/: ext_software_io.py  gau_parse.py
vsbtools/materials_tools/el_spectra_tools/: 3d_tools.py  hydrogen.py  kpoint_tools.py  localisation_utils.py
vsbtools/materials_tools/ext_software_io/: __init__.py  ext_software_io.py  gau_parse.py
vsbtools/materials_tools/geom_utils/: POSCAR  coordination_tools.py  coordination_tools_old.py  extract_prim_cell.py  get_supercell_for_phonopy.py  misc_geom_tools.py  poscar_modifiers.py  structure_checks.py  sym_tools.py
vsbtools/materials_tools/graph_utils/: formatting.py  my_graphs.py
vsbtools/materials_tools/materials_dataset/: converters.py  crystalDataset.py  crystal_dataset.py  crystal_entry.py  crystal_set.py  db_preset_scenarios.py  oqmd_parser.py  postprocessing_pipeline.py
vsbtools/materials_tools/materials_dataset_legacy/: MoSiB.csv  alexandria_parser.py  crystalDataset.py  db_preset_scenarios.py  db_toolkit.py  postprocessing_pipeline.py
vsbtools/uspex_gather_stat/: .gitignore  .gitmodules  machines.cjson  restart.sh  statistics_cycle.py
(+19582 files in other folders)
