[build-system]
requires = ["setuptools>=68", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "vsbtools"
dynamic = ["version"]
requires-python = ">=3.9"
dependencies = [ "numpy", "ase"]
# (rest same as above)

[project.optional-dependencies]
gaussian_calc_manager = [
  "cclib>=1.8"
]
genutils = [
  # "rich>=13",
]
materials_tools = [
  "pandas", "torch", "pymatgen", "prettytable", "mp_api", "mysqlclient", "ijson"
]
uspex_gather_stat = [
  # "matplotlib>=3.8",
]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"
