[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vsbtools"
dynamic = ["version"]
description = "Research toolbox for atomistic materials workflows."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["materials-science", "atomistic-simulation", "crystal-structures"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "ase<3.26",
  "numpy",
]

[project.optional-dependencies]
materials_dataset = [
  "dscribe",
  "ijson",
  "matplotlib",
  "mp-api",
  "mysqlclient",
  "networkx",
  "pandas",
  "prettytable",
  "pymatgen",
  "PyYAML",
  "scipy",
  "torch",
]
all = [
  "dscribe",
  "ijson",
  "matplotlib",
  "mp-api",
  "mysqlclient",
  "networkx",
  "pandas",
  "prettytable",
  "pymatgen",
  "PyYAML",
  "scipy",
  "torch",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["vsbtools*"]
exclude = [
  "vsbtools.*.unittests",
  "vsbtools.*.unittests.*",
  "vsbtools.*.test_dir",
  "vsbtools.*.test_dir.*",
  "vsbtools.*.tmp_proj",
  "vsbtools.*.tmp_proj.*",
]

[tool.setuptools.exclude-package-data]
"vsbtools" = [
  "**/.ipynb_checkpoints/**",
  "**/*.log",
  "**/*.pkl",
  "**/*.swp",
  "**/*.tgz",
  "**/test_dir/**",
  "**/tmp_proj/**",
  "**/unittests/**",
  "**/unittests_datasets/**",
]

[tool.setuptools.dynamic]
version = {attr = "vsbtools.__version__"}
